<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".NoteDetailsActivity">

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:minWidth="64dp"
            android:minHeight="48dp"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Delete"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:backgroundTint="@color/design_default_color_error"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/saveImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/save_button_description"
        android:src="@drawable/baseline_done_24" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_container"
        android:hint="@string/note_title_hint"
        android:inputType="text"
        android:textColor="#080202"
        android:padding="12dp"
        android:singleLine="true"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titleEditText"
        android:gravity="top"
        android:hint="@string/note_content_hint"
        android:inputType="textMultiLine"
        android:textColor="#2B2730"
        android:padding="12dp"
        android:textSize="18sp" />
</RelativeLayout>